Update HologramEditPitchCommand & HologramEditYawCommand